@@ -1,5 +1,8 @@
 2008-01-17  Lawrence Mitchell  <wence@gmx.li>
 
+	* llm-reftex-fns.el: New file.  Finding hardcopies of papers from
+	reftex citations.
+
 	* compose.el: New file.  Composition mode for mutt mail messages.
 
 2008-01-15  Lawrence Mitchell  <wence@gmx.li>
